--- a/src/_locales/ar/messages.json
+++ b/src/_locales/ar/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<viv> <p> Hello World </p> هذه هي اللغة <strong> </strong> من الويب </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "محرك البحث"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "محرك البحث الذي سيتم استخدامه لمعاينات البحث داخل الخط."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "بحث جوجل"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "البحث بينج"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "البحث ياهو"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "بحث بايدو"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "البحث Yandex"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "عرض المعاينة (٪)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "عرض لوحة المعاينة بالنسبة للصفحة."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "ارتفاع معاينة (٪)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "ارتفاع لوحة المعاينة بالنسبة إلى الصفحة."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "وضع لوحة"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "جانب الصفحة لعرض المعاينة."
   },
-  "Right side": {
+  "Right_side": {
     "message": "الجانب الأيمن"
   },
-  "Left side": {
+  "Left_side": {
     "message": "الجهه اليسرى"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "أغلق على مفتاح الهروب"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "استخدم مفتاح ESC (Escape) لإغلاق لوحة المعاينة."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "إخفاء المعاينات تلقائيا"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "يخفي لوحة المعاينة عند التمرير أو التفاعل مع الصفحة الرئيسية."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "معاينة في اللوحة الجانبية"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "يعرض العرض في اللوحة الجانبية للكروم بدلاً من صندوق عائم."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "معاينة التأخير على محط"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "عند تمكين المعاينة التلقائية على التحوم ، هذا هو التأخير قبل عرض المعاينة."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[متقدم] معاينة القوة"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "بالنسبة لمواقع الويب التي ** حقًا ** لا تريد معاينة (على سبيل المثال StackOverFlow.com) ، فإن هذا يفرض معاينة. تنبيه الطالب الذي يذاكر كثيرا: هذا هو buster خدعة الإطار."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[متقدم] تعطيل التخفي google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "افتراضيًا ، يتم دائمًا توقيع إصدار Google Search المستخدم لأسباب الخصوصية والأمن. على الرغم من أن هذا قد يؤدي دائمًا إلى رؤية مطالبات تسجيل الدخول."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "تعطيل المعاينات على هذا الموقع"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "معلومات التفاصيل حول مربع الاختيار هنا."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "معاق على مواقع الويب"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "لن يعمل التمديد على هذه المواقع ، يمكنك تعطيل موقع بإضافة إلى هذه القائمة."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "الإعدادات التي تم تحديثها بنجاح"
   }
 }
