--- a/src/_locales/es/messages.json
+++ b/src/_locales/es/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<Viv> <p> Hello World </p> Este es el lenguaje <strong> </strong> de la web </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Buscador"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "El motor de búsqueda que se utilizaría para las vistas previas de búsqueda en línea."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Búsqueda de Google"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Búsqueda de bing"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Búsqueda de yahoo"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Baidu Search"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Búsqueda de yandex"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Vista previa de ancho (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "El ancho del panel de vista previa en relación con la página."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Altura de vista previa (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "La altura del panel de vista previa en relación con la página."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Posición del panel"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "El lado de la página para mostrar la vista previa."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Lado derecho"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Lado izquierdo"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Cerrar en la llave de escape"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Use la tecla ESC (Escape) para cerrar el panel de vista previa."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Ocultar automáticamente las vistas previas"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Oculta el panel de vista previa cuando se desplaza o interactúa con la página principal."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Vista previa en el panel lateral"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Muestra la vista en el panel lateral de Chrome en lugar de una caja flotante."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Vista previa al retraso"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Cuando se habilita la vista previa automática en Hover, este es el retraso antes de que se muestre la vista previa."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "Vista previa de la fuerza [avanzada]"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Para sitios web que ** realmente ** no quieren que se presente una vista previa (por ejemplo, stackoverflow.com) esto obliga a una vista previa. ALERTA DE NERD: Este es un buster de fractura."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Avanzado] Desactivar incógnito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Por defecto, la versión de Google Search utilizada siempre está firmada por razones de privacidad y seguridad. Aunque esto puede dar lugar a siempre ver indicaciones de inicio de sesión."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Desactivar las vistas previas en este sitio"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "La información detallada sobre la casilla de verificación aquí."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Discapacitado en sitios web"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "La extensión no se ejecutará en estos sitios, puede deshabilitar un sitio agregando a esta lista."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Configuración actualizada con éxito"
   }
 }
