--- a/src/_locales/et/messages.json
+++ b/src/_locales/et/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Tere maailm </p> See on veebi </strong>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Otsingumootor"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Otsingumootor, mida kasutataks inline otsingu eelvaateks."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Google otsing"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Bingiotsing"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Yahoo otsing"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Baidu otsing"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Yandexi otsing"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Eelvaate laius (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Eelvaatepaneeli laius lehe suhtes."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Eelvaate kõrgus (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Eelvaate paneeli kõrgus lehe suhtes."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Paneeli asukoht"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Lehe külg, kus eelvaadet kuvada."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Parem pool"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Vasak pool"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Sulgege põgenemisvõti"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Eelvaatepaneeli sulgemiseks kasutage klahvi ESC (Escape)."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Peidake automaatselt eelvaateid"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Peidage eelvaate paneeli, kui kerid ära või suhtlete põhilehega."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Eelvaade külgpaneelil"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Kuvab vaate kroomi külgpaneelil ujuva kasti asemel."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Eelvaade-HOVER viivitus"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Kui automaatne eelvaade on lubatud, on see viivitus enne eelvaate kuvamist."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced] jõu eelvaade"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Veebisaitide jaoks, mis ** tõesti ** ei soovi, et neid eelvaateks (nt Stackoverflow.com), sunnib see eelvaadet. Nerd Alert: see on kaadripüük."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Keela inkognito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Vaikimisi on kasutatud Google'i otsingu versioon privaatsuse ja turvalisuse huvides alati allkirjastatud. Kuigi selle tulemusel võib alati näha sisselogimisjuhiseid."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Keela eelvaated sellel saidil"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Üksikasjalik teave märkeruutu kohta siin."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Veebisaitidel puudega"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Pikendus ei tööta nendel saitidel, vaid saate selle loendi lisades saidi keelata."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Edukalt värskendatud sätted"
   }
 }
