--- a/src/_locales/it/messages.json
+++ b/src/_locales/it/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<AV> <p> Hello World </p> Questa è la lingua <strong> </strong> del web </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Motore di ricerca"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Il motore di ricerca che verrebbe utilizzato per le anteprime di ricerca in linea."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Ricerca Google"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Ricerca Bing"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Yahoo Search"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Ricerca Baidu"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Ricerca Yandex"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Larghezza di anteprima (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "La larghezza del pannello di anteprima relativo alla pagina."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Anteprima Altezza (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "L'altezza del pannello di anteprima relativa alla pagina."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Posizione del pannello"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Il lato della pagina in cui visualizzare l'anteprima."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Lato destro"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Lato sinistro"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Chiudere la chiave di fuga"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Utilizzare il tasto ESC (Escape) per chiudere il pannello di anteprima."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Nascondi automaticamente le anteprime"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Nasconda il pannello di anteprima quando si scorre via o si interagisce con la pagina principale."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Anteprima nel pannello laterale"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Visualizza la vista nel pannello laterale Chrome anziché in una scatola mobile."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Ritardo di anteprima su hover"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Quando l'anteprima automatica sull'hover è abilitata, questo è il ritardo prima che venga mostrato l'anteprima."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "Anteprima della forza [avanzata]"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Per i siti Web che ** davvero ** non vogliono essere visualizzati in anteprima (ad esempio stackoverflow.com), ciò costringe un'anteprima. Avviso di nerd: questo è un buster con la cornice."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Avanzato] Disabilita incognito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Per impostazione predefinita, la versione di Google Search utilizzata è sempre firmata per motivi di privacy e sicurezza. Anche se ciò può comportare il vedere sempre i suggerimenti di accesso."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Disabilita le anteprime su questo sito"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Le informazioni sui dettagli sulla casella di controllo qui."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Disabilitato sui siti Web"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "L'estensione non verrà eseguita su questi siti, è possibile disabilitare un sito aggiungendo questo elenco."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Impostazioni aggiornate correttamente"
   }
 }
