--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> hello world </p>これは<strong>言語</strong> </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "検索エンジン"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "インライン検索プレビューに使用される検索エンジン。"
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Google検索"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "ビング検索"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Yahoo Search"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Baidu検索"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Yandex検索"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "プレビュー幅（％）"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "ページに対するプレビューパネルの幅。"
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "プレビューの高さ（％）"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "ページに対するプレビューパネルの高さ。"
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "パネル位置"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "プレビューを表示するページの側面。"
   },
-  "Right side": {
+  "Right_side": {
     "message": "右側"
   },
-  "Left side": {
+  "Left_side": {
     "message": "左側"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "エスケープキーを閉じます"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "ESC（エスケープ）キーを使用して、プレビューパネルを閉じます。"
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "プレビューを自動的に非表示にします"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "メインページをスクロールまたは対話するときに、プレビューパネルを隠します。"
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "サイドパネルでプレビューします"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "フローティングボックスの代わりに、クロムサイドパネルにビューを表示します。"
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "プレビューオンホバー遅延"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "ホバーでの自動プレビューが有効になっている場合、これはプレビューが表示される前の遅延です。"
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced]力プレビュー"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "**本当に**プレビューしたくないWebサイト（例：stackoverflow.com）は、プレビューを強制します。 オタクアラート：これはフレームバストバスターです。"
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Incognito Googleを無効にします"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "デフォルトでは、使用されているGoogle検索のバージョンは、プライバシーとセキュリティ上の理由に常にサインアウトされます。 ただし、これにより、常にサインインプロンプトが表示される場合があります。"
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "このサイトでプレビューを無効にします"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "ここのチェックボックスの詳細情報。"
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Webサイトで無効になっています"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "拡張機能はこれらのサイトで実行されません。このリストに追加することでサイトを無効にすることができます。"
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "正常に更新された設定"
   }
 }
