--- a/src/_locales/mr/messages.json
+++ b/src/_locales/mr/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> हॅलो वर्ल्ड </p> ही वेबची </strong> </strong> आहे </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "शोध इंजिन"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "इनलाइन शोध पूर्वावलोकनांसाठी वापरलेले शोध इंजिन."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "गुगल शोध"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "बिंग शोध"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "याहू शोध"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "बाईडू शोध"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "यॅन्डेक्स शोध"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "पूर्वावलोकन रुंदी (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "पृष्ठाशी संबंधित पूर्वावलोकन पॅनेलची रुंदी."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "पूर्वावलोकन उंची (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "पृष्ठाशी संबंधित पूर्वावलोकन पॅनेलची उंची."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "पॅनेल स्थिती"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "पूर्वावलोकन प्रदर्शित करण्यासाठी पृष्ठाची बाजू."
   },
-  "Right side": {
+  "Right_side": {
     "message": "उजवी बाजू"
   },
-  "Left side": {
+  "Left_side": {
     "message": "डावी बाजू"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "एस्केप की वर बंद करा"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "पूर्वावलोकन पॅनेल बंद करण्यासाठी ईएससी (एस्केप) की वापरा."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "आपोआप पूर्वावलोकन लपवा"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "जेव्हा आपण दूर स्क्रोल करता किंवा मुख्य पृष्ठासह संवाद साधता तेव्हा पूर्वावलोकन पॅनेल लपवते."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "साइड पॅनेलमध्ये पूर्वावलोकन"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "फ्लोटिंग बॉक्सऐवजी क्रोम साइड पॅनेलमध्ये दृश्य प्रदर्शित करते."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "पूर्वावलोकन-ऑन-होव्हर विलंब"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "जेव्हा होव्हरवरील स्वयंचलित पूर्वावलोकन सक्षम केले जाते, तेव्हा पूर्वावलोकन दर्शविण्यापूर्वी हा उशीर होतो."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[प्रगत] सक्तीचे पूर्वावलोकन"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "** खरोखर ** पूर्वावलोकन करू इच्छित नाही अशा वेबसाइट्ससाठी (उदा. स्टॅकओव्हरफ्लो.कॉम) हे पूर्वावलोकन सक्ती करते. नेरड अ‍ॅलर्ट: हा एक फ्रेम-बस्टिंग बस्टर आहे."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[प्रगत] गुप्त गुगल अक्षम करा"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "डीफॉल्टनुसार, वापरलेल्या Google शोधाची आवृत्ती गोपनीयता आणि सुरक्षिततेच्या कारणांसाठी नेहमीच साइन आउट केली जाते. जरी याचा परिणाम नेहमी साइन-इन प्रॉम्प्ट्स पाहता येतो."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "या साइटवरील पूर्वावलोकन अक्षम करा"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "येथे चेकबॉक्सबद्दल तपशील माहिती."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "वेबसाइटवर अक्षम"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "या साइटवर विस्तार चालू होणार नाही, आपण या सूचीमध्ये जोडून साइट अक्षम करू शकता."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "यशस्वीरित्या अद्यतनित सेटिंग्ज"
   }
 }
