--- a/src/_locales/sk/messages.json
+++ b/src/_locales/sk/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Ahoj svet </p> Toto je jazyk <strong> </strong> z webu </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Vyhľadávač"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Vyhľadávací nástroj, ktorý by sa použil na inline ukážky vyhľadávania."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Google vyhľadávanie"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Vyhľadávanie"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Hľadanie Yahoo"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Vyhľadávanie Baidu"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Vyhľadávanie YANDEX"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Šírka ukážky (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Šírka panela ukážky vzhľadom na stránku."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Výška ukážky (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Výška panela ukážky vzhľadom na stránku."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Poloha panela"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Strana stránky, na ktorej sa má zobraziť ukážku."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Pravá strana"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Ľavá strana"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Zatvorte na útek"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Na zatvorenie panela ukážky použite kľúč ESC (Escape)."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Automaticky skryť ukážky"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Pri posúvaní alebo interakcii s hlavnou stránkou skrýva panel s ukážkou."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Náhľad na bočnom paneli"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Zobrazuje zobrazenie na bočnom paneli Chrome namiesto plávajúceho boxu."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Oneskorenie s náhľadom na predbiehanie"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Ak je povolená automatická ukážka na vznášaní, je to oneskorenie pred zobrazením ukážky."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced] Force Preview"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "V prípade webových stránok, ktoré ** naozaj ** nechce byť zobrazený (napr. StackOverflow.com), to vynúti ukážku. Nerd Alert: Toto je buster s rámom."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Zakázať inkognito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "V predvolenom nastavení sa verzia použitého vyhľadávania Google vždy odpisuje z dôvodov ochrany súkromia a bezpečnosti. Aj keď to môže mať za následok vždy vidieť výzvy na prihlásenie."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Zakážte ukážky na tejto stránke"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Podrobné informácie o začiarkavacom políčku tu."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Zakázané na webových stránkach"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Rozšírenie sa na týchto stránkach nebude behať, môžete web zakázať pridaním do tohto zoznamu."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Úspešne aktualizované nastavenia"
   }
 }
