--- a/src/_locales/sw/messages.json
+++ b/src/_locales/sw/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Hello World </p> Hii ndio lugha ya <strong> </strong> ya wavuti </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Injini ya utaftaji"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Injini ya utaftaji ambayo itatumika kwa hakikisho za utaftaji wa ndani."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Utaftaji wa Google"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Utafutaji wa Bing"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Utaftaji wa Yahoo"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Utaftaji wa Baidu"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Utaftaji wa Yandex"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Hakiki upana wa hakiki (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Upana wa jopo la hakikisho la jamaa na ukurasa."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Hakiki urefu (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Urefu wa jopo la hakikisho jamaa na ukurasa."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Msimamo wa jopo"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Upande wa ukurasa ambao kuonyesha hakiki."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Upande wa kulia"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Upande wa kushoto"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Karibu kwenye ufunguo wa kutoroka"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Tumia kitufe cha ESC (kutoroka) kufunga jopo la hakiki."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Hakiki hakiki hakiki"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Huficha paneli ya hakiki wakati unapoenda mbali au kuingiliana na ukurasa kuu."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Hakiki katika jopo la upande"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Inaonyesha mtazamo katika jopo la upande wa Chrome badala ya sanduku la kuelea."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Hakiki kuchelewesha-kwa-Hover"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Wakati hakiki ya moja kwa moja kwenye Hover imewezeshwa, huu ni kuchelewesha kabla ya hakikisho kuonyeshwa."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced] Hakiki ya Nguvu"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Kwa wavuti ambazo ** kweli ** hazitaki hakikisho (k.m. stackoverflow.com) hii inalazimisha hakiki. Arifa ya NERD: Hii ni buster-busting."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Lemaza Google Incognito"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Kwa msingi, toleo la utaftaji wa google linalotumiwa kila wakati linasainiwa kwa sababu za faragha na usalama. Ingawa hii inaweza kusababisha kuona kila wakati wa kuingia."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Lemaza hakiki kwenye wavuti hii"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Maelezo ya kina juu ya kisanduku cha kuangalia hapa."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Walemavu kwenye wavuti"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Ugani hautaendesha kwenye tovuti hizi, unaweza kulemaza tovuti kwa kuongeza kwenye orodha hii."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Mipangilio iliyosasishwa kwa mafanikio"
   }
 }
