--- a/src/_locales/ta/messages.json
+++ b/src/_locales/ta/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> ஹலோ வேர்ல்ட் </p> இது வலையின் <strong> மொழி </strong> ஆகும் </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "தேடல் இயந்திரம்"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "இன்லைன் தேடல் முன்னோட்டங்களுக்கு பயன்படுத்தப்படும் தேடுபொறி."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "கூகிளில் தேடு"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "பிங் தேடல்"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "யாகூ தேடல்"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "பைடு தேடல்"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "யாண்டெக்ஸ் தேடல்"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "முன்னோட்ட அகலம் (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "பக்கத்துடன் தொடர்புடைய முன்னோட்டக் குழுவின் அகலம்."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "முன்னோட்ட உயரம் (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "பக்கத்துடன் தொடர்புடைய முன்னோட்டக் குழுவின் உயரம்."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "குழு நிலை"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "முன்னோட்டத்தைக் காண்பிக்கும் பக்கத்தின் பக்கம்."
   },
-  "Right side": {
+  "Right_side": {
     "message": "வலது பக்கம்"
   },
-  "Left side": {
+  "Left_side": {
     "message": "இடது பக்கம்"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "எஸ்கேப் விசையை மூடு"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "முன்னோட்டக் குழுவை மூட ESC (ESCOW) விசையைப் பயன்படுத்தவும்."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "முன்னோட்டங்களை தானாக மறைக்கவும்"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "நீங்கள் உருட்டும்போது அல்லது பிரதான பக்கத்துடன் தொடர்பு கொள்ளும்போது முன்னோட்ட பேனலை மறைக்கிறது."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "பக்க பேனலில் முன்னோட்டம்"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "மிதக்கும் பெட்டிக்கு பதிலாக Chrome பக்க பேனலில் காட்சியைக் காட்டுகிறது."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "முன்னோட்ட-ஆன்-ஹவர் தாமதம்"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "ஹோவர் மீதான தானியங்கி முன்னோட்டம் இயக்கப்பட்டால், முன்னோட்டம் காண்பிக்கப்படுவதற்கு முன்பு இது தாமதம்."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[மேம்பட்ட] படை முன்னோட்டம்"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "** உண்மையில் ** முன்னோட்டமிட விரும்பாத வலைத்தளங்களுக்கு (எ.கா. stackoverflow.com) இது ஒரு முன்னோட்டத்தை கட்டாயப்படுத்துகிறது. மேதாவி எச்சரிக்கை: இது ஒரு பிரேம்-உடைக்கும் பஸ்டர்."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[மேம்பட்ட] கூகிளை மறைமுகமாக முடக்கு"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "இயல்பாக, பயன்படுத்தப்படும் கூகிள் தேடலின் பதிப்பு எப்போதும் தனியுரிமை மற்றும் பாதுகாப்பு காரணங்களுக்காக கையொப்பமிடப்படுகிறது. இது எப்போதும் உள்நுழைவு தூண்டுதல்களைப் பார்க்கக்கூடும்."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "இந்த தளத்தில் முன்னோட்டங்களை முடக்கு"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "இங்கே தேர்வுப்பெட்டி பற்றிய விரிவான தகவல்கள்."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "வலைத்தளங்களில் முடக்கப்பட்டது"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "இந்த தளங்களில் நீட்டிப்பு இயங்காது, இந்த பட்டியலில் சேர்ப்பதன் மூலம் ஒரு தளத்தை முடக்கலாம்."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "வெற்றிகரமாக புதுப்பிக்கப்பட்ட அமைப்புகள்"
   }
 }
