--- a/src/_locales/tr/messages.json
+++ b/src/_locales/tr/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<Div> <p> Merhaba Dünya </p> Bu <strong> dil </strong> Web'in"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Arama motoru"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Satır içi arama önizlemeleri için kullanılacak arama motoru."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Google arama"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Bing Arama"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Yahoo Arama"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Baidu Arama"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Yandex Arama"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Önizleme genişliği (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Önizleme panelinin genişliği sayfaya göre."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Önizleme Yüksekliği (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Önizleme panelinin sayfaya göre yüksekliği."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Panel pozisyonu"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Önizlemeyi görüntülemek için sayfanın tarafı."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Sağ Taraf"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Sol Taraf"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Escape Anahtarında Kapat"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Önizleme panelini kapatmak için ESC (Escape) tuşunu kullanın."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Önizlemeleri otomatik olarak gizle"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Ana sayfada kaydırdığınızda veya etkileşime girdiğinizde önizleme panelini gizler."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Yan panelde önizleme"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Görünüşü Kayan bir kutu yerine krom yan panelde görüntüler."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Hover Gecikme Önizleme"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Varışta otomatik önizleme etkinleştirildiğinde, önizleme gösterilmeden önceki gecikme budur."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Gelişmiş] Kuvvet Önizleme"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "** gerçekten ** önizlemek istemeyen web siteleri için (örn. Stackoverflow.com) bu bir önizlemeyi zorlar. Nerd Alert: Bu bir çerçeve çubuğu Buster."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Gelişmiş] Gizli Google'ı devre dışı bırakın"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Varsayılan olarak, kullanılan Google Search sürümü gizlilik ve güvenlik nedenleriyle her zaman imzalanır. Bununla birlikte, bu her zaman oturum açma istemleri görmeye neden olabilir."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Bu sitedeki önizlemeleri devre dışı bırakın"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Onay kutusu hakkında ayrıntılı bilgi."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Web sitelerinde devre dışı"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Uzatma bu sitelerde çalışmaz, bu listeye ekleyerek bir siteyi devre dışı bırakabilirsiniz."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Başarılı bir şekilde güncellenen ayarlar"
   }
 }
