--- a/src/_locales/uk/messages.json
+++ b/src/_locales/uk/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Hello World </p> Це <strong> мова </strong> веб -сайту </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Пошукова система"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Пошукова система, яка буде використана для вбудованого попереднього перегляду пошуку."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Пошук Google"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Бінг пошук"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Yahoo пошук"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Пошук Байду"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Пошук Яндекса"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Попередній перегляд (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Ширина панелі попереднього перегляду відносно сторінки."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Висота попереднього перегляду (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Висота панелі попереднього перегляду відносно сторінки."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Положення панелі"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Сторона сторінки, на якій відображати попередній перегляд."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Права сторона"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Ліва сторона"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Закрийте на ключі втечі"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Використовуйте клавішу ESC (Escape), щоб закрити панель попереднього перегляду."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Автоматично приховати попередній перегляд"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Приховує панель попереднього перегляду, коли ви прокручуєте або взаємодієте з головною сторінкою."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Попередній перегляд на бічній панелі"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Відображає перегляд на бічній панелі Chrome замість плаваючого коробки."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Попередня затримка"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Коли ввімкнено автоматичний попередній перегляд наведення, це затримка перед показом попереднього перегляду."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced] Попередній перегляд сили"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "На веб -сайтах, які ** дійсно ** не хочуть переглянути попереднє перегляд (наприклад, stackoverflow.com), це змушує попередній перегляд. Оповіщення Nerd: Це рамка, що стримує рамку."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Вимкніть incognito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "За замовчуванням версія використання Google Search завжди виходить з міркувань конфіденційності та безпеки. Хоча це може призвести до того, що завжди бачать підказки для входу."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Вимкнути попередній перегляд на цьому сайті"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Детальна інформація про прапорець тут."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Відключено на веб -сайтах"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Розширення не буде працювати на цих сайтах, ви можете відключити сайт, додавши до цього списку."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Успішно оновлені налаштування"
   }
 }
