--- a/src/_locales/he/messages.json
+++ b/src/_locales/he/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> שלום עולם </p> זוהי שפה <strong> </strong> של האינטרנט </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "מנוע חיפוש"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "מנוע החיפוש שישמש לתצוגה מקדימה של חיפוש מוטבע."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "חיפוש בגוגל"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "חיפוש בינג"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "חיפוש יאהו"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "חיפוש ביידו"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "חיפוש Yandex"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "רוחב תצוגה מקדימה (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "רוחב לוח התצוגה המקדימה ביחס לדף."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "גובה תצוגה מקדימה (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "גובה לוח התצוגה המקדימה ביחס לדף."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "מיקום הפאנל"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "הצד של הדף בו ניתן להציג את התצוגה המקדימה."
   },
-  "Right side": {
+  "Right_side": {
     "message": "צד ימין"
   },
-  "Left side": {
+  "Left_side": {
     "message": "צד שמאל"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "סגור את מפתח הבריחה"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "השתמש במפתח ESC (Escape) כדי לסגור את לוח התצוגה המקדימה."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "הסתירה אוטומטית תצוגה מקדימה"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "מסתיר את לוח התצוגה המקדימה כשאתה גולש או אינטראקציה עם העמוד הראשי."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "תצוגה מקדימה בלוח הצדדי"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "מציג את התצוגה בלוח הצד של Chrome במקום קופסה צפה."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "עיכוב מקדימה על העופות"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "כאשר מופעלת תצוגה מקדימה אוטומטית על רחף, זהו העיכוב לפני שמוצג התצוגה המקדימה."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "תצוגה מקדימה של כוח [מתקדם]"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "עבור אתרים ש- ** באמת ** לא רוצים לתצוגה מקדימה (למשל StackOverFlow.com) זה מכריח תצוגה מקדימה. התראת חנונים: זהו באסטר שוחק מסגרת."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[מתקדם] השבתו את הסתר גוגל"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "כברירת מחדל, גרסת ה- Google Search המשמשת תמיד חתומה מסיבות פרטיות ואבטחה. אם כי זה עלול לגרום תמיד לראות הנחיות כניסה."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "השבת תצוגה מקדימה באתר זה"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "פרטי הפרט אודות תיבת הסימון כאן."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "מושבת באתרים"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "ההרחבה לא תפעל באתרים אלה, באפשרותך להשבית אתר על ידי הוספת לרשימה זו."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "הגדרות מעודכנות בהצלחה"
   }
 }
