--- a/src/_locales/hi/messages.json
+++ b/src/_locales/hi/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<viv> <p> हैलो वर्ल्ड </p> यह वेब का <strong> भाषा </strong> है </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "खोज इंजन"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "खोज इंजन जिसका उपयोग इनलाइन खोज पूर्वावलोकन के लिए किया जाएगा।"
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "गूगल खोज"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "बिंग खोज"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "याहू खोज"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Baidu खोज"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "यैंडेक्स खोज"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "पूर्वावलोकन चौड़ाई (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "पृष्ठ के सापेक्ष पूर्वावलोकन पैनल की चौड़ाई।"
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "पूर्वावलोकन ऊंचाई (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "पृष्ठ के सापेक्ष पूर्वावलोकन पैनल की ऊंचाई।"
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "पैनल स्थिति"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "उस पृष्ठ का पक्ष जिसमें पूर्वावलोकन प्रदर्शित करना है।"
   },
-  "Right side": {
+  "Right_side": {
     "message": "दाहिनी ओर"
   },
-  "Left side": {
+  "Left_side": {
     "message": "बाईं तरफ"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "एस्केप कुंजी पर बंद करें"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "पूर्वावलोकन पैनल को बंद करने के लिए ESC (एस्केप) कुंजी का उपयोग करें।"
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "स्वचालित रूप से पूर्वावलोकन छिपाते हैं"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "जब आप स्क्रॉल करते हैं या मुख्य पृष्ठ के साथ बातचीत करते हैं, तो पूर्वावलोकन पैनल को छिपाता है।"
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "साइड पैनल में पूर्वावलोकन करें"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "फ्लोटिंग बॉक्स के बजाय क्रोम साइड पैनल में दृश्य प्रदर्शित करता है।"
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "पूर्वावलोकन-ऑन-होवर विलंब"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "जब होवर पर स्वचालित पूर्वावलोकन सक्षम होता है, तो पूर्वावलोकन दिखाने से पहले यह देरी होती है।"
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[उन्नत] बल पूर्वावलोकन"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "उन वेबसाइटों के लिए जो ** वास्तव में ** का पूर्वावलोकन नहीं करना चाहते हैं (जैसे कि StackOverFlow.com) यह एक पूर्वावलोकन को मजबूर करता है। Nerd Alert: यह एक फ्रेम-बस्टिंग बस्टर है।"
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[उन्नत] incognito Google को अक्षम करें"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "डिफ़ॉल्ट रूप से, Google खोज का उपयोग हमेशा गोपनीयता और सुरक्षा कारणों से साइन-आउट है। हालांकि यह हमेशा साइन-इन संकेतों को देखने में परिणाम हो सकता है।"
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "इस साइट पर पूर्वावलोकन अक्षम करें"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "यहां चेकबॉक्स के बारे में विस्तार से जानकारी।"
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "वेबसाइटों पर अक्षम"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "एक्सटेंशन इन साइटों पर नहीं चलेगा, आप इस सूची में जोड़कर किसी साइट को अक्षम कर सकते हैं।"
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "सफलतापूर्वक अद्यतन सेटिंग्स"
   }
 }
