--- a/src/_locales/id/messages.json
+++ b/src/_locales/id/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Halo dunia </p> Ini adalah bahasa <strong> </strong> dari web </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Mesin pencari"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Mesin pencari yang akan digunakan untuk pratinjau pencarian inline."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Pencarian Google"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Pencarian Bing"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Pencarian Yahoo"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Pencarian Baidu"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Pencarian Yandex"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Pratinjau lebar (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Lebar panel pratinjau relatif terhadap halaman."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Tinggi pratinjau (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Ketinggian panel pratinjau relatif terhadap halaman."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Posisi panel"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Sisi halaman untuk menampilkan pratinjau."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Sisi kanan"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Sisi kiri"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Tutup di Escape Key"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Gunakan kunci ESC (Escape) untuk menutup panel pratinjau."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Secara otomatis menyembunyikan pratinjau"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Menyembunyikan panel pratinjau saat Anda menggulir atau berinteraksi dengan halaman utama."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Pratinjau di panel samping"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Menampilkan tampilan di panel samping krom, bukan kotak mengambang."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Pratinjau penundaan-ke-hover"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Ketika pratinjau otomatis pada hover diaktifkan, ini adalah penundaan sebelum pratinjau ditampilkan."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Lanjutan] Pratinjau Force"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Untuk situs web yang ** benar -benar ** tidak ingin dipratinjau (mis. Stackoverflow.com) Ini memaksa pratinjau. NERD ALERT: Ini adalah Buster yang menghindarkan bingkai."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Lanjutan] Nonaktifkan Penyamaran Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Secara default, versi pencarian Google yang digunakan selalu ditandatangani untuk alasan privasi dan keamanan. Meskipun ini dapat menyebabkan selalu melihat permintaan masuk."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Nonaktifkan pratinjau di situs ini"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Informasi detail tentang kotak centang di sini."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Dinonaktifkan di situs web"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Ekstensi tidak akan berjalan di situs -situs ini, Anda dapat menonaktifkan situs dengan menambahkan ke daftar ini."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Pengaturan yang berhasil diperbarui"
   }
 }
