--- a/src/_locales/lv/messages.json
+++ b/src/_locales/lv/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Hello World </p> Šī ir tīmekļa </strong> valoda </strong> </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Meklētājs"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Meklētājprogramma, kas tiks izmantota inline meklēšanas priekšskatījumiem."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Google meklēšanu"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Bing meklēšana"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Yahoo meklēšana"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Baidu meklēšana"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Yandex meklēšana"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Priekšskatījuma platums (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Priekšskatījuma paneļa platums attiecībā pret lapu."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Priekšskatījuma augstums (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Priekšskatījuma paneļa augstums attiecībā pret lapu."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Paneļa pozīcija"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Lapas puse, kurā parādīt priekšskatījumu."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Labā puse"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Kreisā puse"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Aizveriet bēgšanas atslēgu"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Izmantojiet taustiņu ESC (Escape), lai aizvērtu priekšskatījuma paneli."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Automātiski paslēpt priekšskatījumus"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Slēpj priekšskatījuma paneli, kad ritiniet vai mijiedarbojaties ar galveno lapu."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Priekšskatījums sānu panelī"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Parāda skatu hroma sānu panelī, nevis peldošā lodziņā."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Priekšskatījums-hover kavēšanās"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Kad ir iespējots automātisks priekšskatījums par lidojumu, tas ir kavēšanās pirms priekšskatījuma parādīšanas."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced] Force Preview"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Tīmekļa vietnēm, kuras ** tiešām ** nevēlas priekšskatīt (piemēram, Stackoverflow.com), tas piespiež priekšskatījumu. Nerd trauksme: tas ir rāmja satricinošs Busters."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Atspējot inkognito google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Pēc noklusējuma izmantotā Google meklēšanas versija vienmēr tiek izrakstīta privātuma un drošības apsvērumu dēļ. Lai gan tas var izraisīt vienmēr pierakstīšanos."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Atspējot priekšskatījumus šajā vietnē"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Sīkāka informācija par izvēles rūtiņu šeit."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Vietnēs atspējots"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Paplašinājums šajās vietnēs nedarbosies, jūs varat atspējot vietni, pievienojot šim sarakstam."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Veiksmīgi atjauninātie iestatījumi"
   }
 }
