--- a/src/_locales/ms/messages.json
+++ b/src/_locales/ms/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> hello world </p> Ini adalah <strong> bahasa </strong> dari web </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Enjin carian"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Enjin carian yang akan digunakan untuk pratonton carian sebaris."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Carian Google"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Carian bing"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Carian Yahoo"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Carian Baidu"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Yandex Search"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Lebar Pratonton (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Lebar panel pratonton relatif kepada halaman."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Ketinggian pratonton (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Ketinggian panel pratonton relatif kepada halaman."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Kedudukan panel"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Bahagian halaman di mana untuk memaparkan pratonton."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Sebelah kanan"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Sebelah kiri"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Tutup pada kunci Escape"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Gunakan kekunci ESC (Escape) untuk menutup panel pratonton."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Secara automatik menyembunyikan pratonton"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Menyembunyikan panel pratonton apabila anda menatal atau berinteraksi dengan halaman utama."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Pratonton di panel sampingan"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Memaparkan pandangan dalam panel sisi krom dan bukannya kotak terapung."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Penangguhan pratonton-on-hover"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Apabila pratonton automatik pada hover didayakan, ini adalah kelewatan sebelum pratonton ditunjukkan."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced] Force Pratonton"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Untuk laman web yang ** benar -benar ** tidak mahu dipratonton (mis. Stackoverflow.com) ini memaksa pratonton. Nerd Alert: Ini adalah buster bingkai."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Lumpuhkan Incognito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Secara lalai, versi carian Google yang digunakan sentiasa ditandatangani untuk alasan privasi dan keselamatan. Walaupun ini mungkin mengakibatkan selalu melihat log masuk."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Lumpuhkan pratonton di laman web ini"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Maklumat terperinci mengenai kotak semak di sini."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Dilumpuhkan di laman web"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Pelanjutan tidak akan berjalan di laman web ini, anda boleh melumpuhkan tapak dengan menambah senarai ini."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Tetapan yang berjaya dikemas kini"
   }
 }
