--- a/src/_locales/sv/messages.json
+++ b/src/_locales/sv/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Hello World </p> Detta är <strong> språket </strong> på webben </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Sökmotor"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Sökmotorn som skulle användas för förhandsgranskningar av sökning."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Google Sök"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Bingsökning"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Yahoo -sökning"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Baidu -sökning"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Yandex -sökning"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Förhandsgranskningsbredd (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Bredden på förhandsgranskningspanelen relativt sidan."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Förhandsgranska höjd (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Höjden på förhandsgranskningspanelen relativt sidan."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Panelposition"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Sidan på sidan för att visa förhandsgranskningen."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Höger sida"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Vänster sida"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Stäng på Escape -nyckeln"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Använd ESC (Escape) -tangenten för att stänga förhandsgranskningspanelen."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Dölj automatiskt förhandsgranskningar"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Gömmer förhandsgranskningspanelen när du bläddrar bort eller interagerar med huvudsidan."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Förhandsgranskning i sidopanelen"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Visar vyn i krom sidopanel istället för en flytande låda."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Förhandsgranskning-på-hover-fördröjning"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "När automatisk förhandsvisning på Hover är aktiverad är detta förseningen innan förhandsgranskningen visas."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Advanced] Force Preview"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "För webbplatser som ** verkligen ** vill inte förhandsgranskas (t.ex. stackoverflow.com) detta tvingar en förhandsgranskning. Nerd Alert: Detta är en rambustande buster."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Advanced] Inaktivera Incognito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Som standard är den version av Google-sökning som används alltid utplånad av integritets- och säkerhetsskäl. Även om detta kan resultera i att alltid se inloggningsuppmaningar."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Inaktivera förhandsvisningar på den här webbplatsen"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Detaljinformationen om kryssrutan här."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Inaktiverad på webbplatser"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Extension kommer inte att köras på dessa webbplatser, du kan inaktivera en webbplats genom att lägga till i den här listan."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Framgångsrikt uppdaterade inställningar"
   }
 }
