--- a/src/_locales/vi/messages.json
+++ b/src/_locales/vi/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<DIV> <p> Xin chào thế giới </p> Đây là ngôn ngữ <strong>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "Máy tìm kiếm"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "Công cụ tìm kiếm sẽ được sử dụng để xem trước tìm kiếm nội tuyến."
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "Tìm kiếm của Google"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Tìm kiếm bing"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "Tìm kiếm Yahoo"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "Tìm kiếm Baidu"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "Tìm kiếm Yandex"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "Chiều rộng xem trước (%)"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "Chiều rộng của bảng xem trước so với trang."
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "Chiều cao xem trước (%)"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "Chiều cao của bảng xem trước so với trang."
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "Vị trí bảng điều khiển"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "Phía của trang để hiển thị bản xem trước."
   },
-  "Right side": {
+  "Right_side": {
     "message": "Bên phải"
   },
-  "Left side": {
+  "Left_side": {
     "message": "Bên trái"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "Đóng trên Key Escape Key"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "Sử dụng phím ESC (Escape) để đóng bảng xem trước."
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "Tự động ẩn xem trước"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "Ẩn bảng xem trước khi bạn cuộn đi hoặc tương tác với trang chính."
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "Xem trước trong bảng điều khiển bên"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "Hiển thị chế độ xem trong bảng điều khiển bên Chrome thay vì hộp nổi."
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "Trước trễ trên hover"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "Khi xem trước tự động trên Hover được bật, đây là độ trễ trước khi xem trước được hiển thị."
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[Nâng cao] Xem trước lực lượng"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "Đối với các trang web ** thực sự ** không muốn được xem trước (ví dụ: stackoverflow.com), điều này buộc một bản xem trước. NERD ALERT: Đây là một Buster có khung hình."
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[Nâng cao] Vô hiệu hóa google ẩn danh"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "Theo mặc định, phiên bản tìm kiếm của Google được sử dụng luôn được đăng xuất vì lý do bảo mật và bảo mật. Mặc dù điều này có thể dẫn đến việc luôn luôn thấy các lời nhắc đăng nhập."
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "Tắt bản xem trước trên trang web này"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "Thông tin chi tiết về hộp kiểm ở đây."
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "Bị vô hiệu hóa trên các trang web"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "Tiện ích mở rộng sẽ không chạy trên các trang web này, bạn có thể vô hiệu hóa một trang web bằng cách thêm vào danh sách này."
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "Cập nhật cài đặt thành công"
   }
 }
