--- a/src/_locales/zh_TW/messages.json
+++ b/src/_locales/zh_TW/messages.json
@@ -14,100 +14,100 @@
   "@testMarkup": {
     "message": "<div> <p> Hello world </p>這是Web的<strong>語言</strong> </div>"
   },
-  "Search engine": {
+  "Search_engine": {
     "message": "搜尋引擎"
   },
-  "The search engine that would be used for inline search previews.": {
+  "The_search_engine_that_would_be_used_for_inline_search_previews_": {
     "message": "用於內聯搜索預覽的搜索引擎。"
   },
-  "Google Search": {
+  "Google_Search": {
     "message": "谷歌搜索"
   },
-  "Bing Search": {
+  "Bing_Search": {
     "message": "Bing搜索"
   },
-  "Yahoo Search": {
+  "Yahoo_Search": {
     "message": "雅虎搜索"
   },
-  "Baidu Search": {
+  "Baidu_Search": {
     "message": "百度搜索"
   },
-  "Yandex Search": {
+  "Yandex_Search": {
     "message": "yandex搜索"
   },
-  "Preview Width (%)": {
+  "Preview_Width____": {
     "message": "預覽寬度（％）"
   },
-  "The width of the preview panel relative to the page.": {
+  "The_width_of_the_preview_panel_relative_to_the_page_": {
     "message": "相對於頁面的預覽面板的寬度。"
   },
-  "Preview Height (%)": {
+  "Preview_Height____": {
     "message": "預覽高度（％）"
   },
-  "The height of the preview panel relative to the page.": {
+  "The_height_of_the_preview_panel_relative_to_the_page_": {
     "message": "預覽面板相對於頁面的高度。"
   },
-  "Panel Position": {
+  "Panel_Position": {
     "message": "面板位置"
   },
-  "The side of the page in which to display the preview.": {
+  "The_side_of_the_page_in_which_to_display_the_preview_": {
     "message": "顯示預覽的頁面的側面。"
   },
-  "Right side": {
+  "Right_side": {
     "message": "右邊"
   },
-  "Left side": {
+  "Left_side": {
     "message": "左邊"
   },
-  "Close on Escape Key": {
+  "Close_on_Escape_Key": {
     "message": "關閉逃生鑰匙"
   },
-  "Use the ESC (escape) key to close the preview panel.": {
+  "Use_the_ESC__escape__key_to_close_the_preview_panel_": {
     "message": "使用ESC（Esce）鍵關閉預覽面板。"
   },
-  "Automatically Hide Previews": {
+  "Automatically_Hide_Previews": {
     "message": "自動隱藏預覽"
   },
-  "Hides the preview panel when you scroll away or interact with the main page.": {
+  "Hides_the_preview_panel_when_you_scroll_away_or_interact_with_the_main_page_": {
     "message": "當您滾動滾動或與主頁互動時，請隱藏預覽面板。"
   },
-  "Preview in Side Panel": {
+  "Preview_in_Side_Panel": {
     "message": "在側面面板中預覽"
   },
-  "Displays the view in Chrome Side Panel instead of a floating box.": {
+  "Displays_the_view_in_Chrome_Side_Panel_instead_of_a_floating_box_": {
     "message": "在鍍鉻側面面板中顯示視圖，而不是浮動盒。"
   },
-  "Preview-on-Hover Delay": {
+  "Preview_on_Hover_Delay": {
     "message": "預覽懸掛延遲"
   },
-  "When automatic preview on hover is enabled, this is the delay before the preview is shown.": {
+  "When_automatic_preview_on_hover_is_enabled__this_is_the_delay_before_the_preview_is_shown_": {
     "message": "當啟用懸停的自動預覽時，這是顯示預覽之前的延遲。"
   },
-  "[Advanced] Force Preview": {
+  "_Advanced__Force_Preview": {
     "message": "[高級]力預覽"
   },
-  "For websites that **really** do not want to be previewed (e.g. stackoverflow.com) this forces a preview. Nerd alert: this is a frame-busting buster.": {
+  "For_websites_that___really___do_not_want_to_be_previewed__e_g__stackoverflow_com__this_forces_a_preview__Nerd_alert__this_is_a_frame_busting_buster_": {
     "message": "對於**確實不想預覽的網站（例如，stackoverflow.com），這會迫使預覽。 書呆子警報：這是一個破壞框架的剋星。"
   },
-  "[Advanced] Disable Incognito Google": {
+  "_Advanced__Disable_Incognito_Google": {
     "message": "[高級]禁用Incognito Google"
   },
-  "By default, the version of Google search used is always signed-out for privacy and security reasons. Though this may result in always seeing sign-in prompts.": {
+  "By_default__the_version_of_Google_search_used_is_always_signed_out_for_privacy_and_security_reasons__Though_this_may_result_in_always_seeing_sign_in_prompts_": {
     "message": "默認情況下，出於隱私和安全原因，使用的Google搜索版本總是被簽署。 儘管這可能會始終看到登錄提示。"
   },
-  "Disable Previews on this site": {
+  "Disable_Previews_on_this_site": {
     "message": "在此網站上禁用預覽"
   },
-  "The detail information about the checkbox here.": {
+  "The_detail_information_about_the_checkbox_here_": {
     "message": "有關複選框的詳細信息。"
   },
-  "Disabled on Websites": {
+  "Disabled_on_Websites": {
     "message": "在網站上禁用"
   },
-  "Extension will not run on these sites, you can disable a site by adding to this list.": {
+  "Extension_will_not_run_on_these_sites__you_can_disable_a_site_by_adding_to_this_list_": {
     "message": "擴展名不會在這些站點上運行，您可以通過添加到此列表中禁用站點。"
   },
-  "Successfully updated settings": {
+  "Successfully_updated_settings": {
     "message": "成功更新了設置"
   }
 }
